--- a/style.css
+++ b/style.css
@@ -29,3 +29,45 @@
   background: #007bb5;           
     color: white;       
 }
+
+.formStyle{
+  width: 60%;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, sans-serif;
+  background-color: rgb(119, 113, 159);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.myForm {
+  width: 100%;
+  max-width: 400px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.myInput[type="text"], .myInput[type="email"] {
+  width: 50%;
+  padding: 8px;
+  margin: 10px 0;
+  box-sizing: border-box;
+}
+.myTextArea {
+  width: 50%;
+  min-height: 90px;
+  padding: 8px;
+  margin: 10px 0;
+  box-sizing: border-box;
+}
+.myButton {
+  width: 50%;
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.myButton:disabled {
+  background-color: #ccc;
+}
